fix customer query and revert to wrapped theme

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,38 +36,39 @@
 
     --radius: 0.5rem;
   }
-  .sued {
-    --gradient: #283048;
-    --background: 239 96.45% 98.44%;
-    --foreground: 239 2.9% 0.88%;
 
-    --muted: 239 2.9% 92.2%;
-    --muted-foreground: 239 1.45% 42.2%;
+  .wrapped {
+    --gradient: #603813;
+    --background: 31 98.35% 98.46%;
+    --foreground: 31 6.7% 0.92%;
 
-    --popover: 239 66.8% 92.2%;
-    --popover-foreground: 239 2.9% 1.1%;
+    --muted: 31 6.7% 92.3%;
+    --muted-foreground: 31 3.35% 42.3%;
 
-    --card: 239 66.8% 92.2%;
-    --card-foreground: 239 2.9% 1.1%;
+    --popover: 31 36.4% 92.3%;
+    --popover-foreground: 31 6.7% 1.1500000000000001%;
 
-    --border: 239 7.9% 89.88%;
-    --input: 239 7.9% 89.88%;
+    --card: 31 36.4% 92.3%;
+    --card-foreground: 31 6.7% 1.1500000000000001%;
 
-    --primary: 239 29% 22%;
-    --primary-foreground: 239 0.58% 92.2%;
+    --border: 31 11.7% 89.92%;
+    --input: 31 11.7% 89.92%;
 
-    --secondary: 239 1.45% 96.1%;
-    --secondary-foreground: 239 2.7399999999999998% 12.2%;
+    --primary: 31 67% 23%;
+    --primary-foreground: 31 1.34% 92.3%;
 
-    --accent: 239 1.45% 96.1%;
-    --accent-foreground: 239 2.7399999999999998% 12.2%;
+    --secondary: 31 3.35% 96.15%;
+    --secondary-foreground: 31 5.0200000000000005% 12.3%;
+
+    --accent: 31 3.35% 96.15%;
+    --accent-foreground: 31 5.0200000000000005% 12.3%;
 
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
 
-    --ring: 239 29% 22%;
+    --ring: 31 67% 23%;
 
-    --radius: 0.5rem;
+    --radius: 0rem;
   }
 }
 
